--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
              <ul class=" navbar-nav me-auto mb-2 mb-lg-0"  style="margin-left: 10px;">
                 <li class="active nav-item"><a href="index.html" class="nav-link text-danger active">Home</a></li>
                <div class="nav-item  "><li  style="margin-left: 25px;" >
-                    <a href="/cricxz/live.html" class="nav-link  ">Live</a>
+                    <a href="live.html" class="nav-link  ">Live</a>
                 </li>
             </div> 
                 <li class="nav-item " style="margin-left: 25px;">
